Fix Clear All button being offscreen (real fix)
I dunno why but apparently I set the height of the total for the day container to 900px... I dunno how it has been looking fine this whole time since it was committed to main. Oh well it's fixed now.

--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ body, h1, h2, h3, h4, h5, h6, .doughbutton {
     display: flex;
     /* flex-basis: max-content; */
     width: 100%;
-    height: 8em; /* temp */
+    /* height: 8em; */
+    height: max-content;
     justify-content: center;
     /* gap: 10px; */
     /* border: 1px solid blue; */
@@ -98,6 +99,7 @@ body, h1, h2, h3, h4, h5, h6, .doughbutton {
     display: grid;
     grid-template-columns: 1.5fr 1fr;
     /* background-color: aqua; */
+    /* border: 1px solid red; */
 }
 
 .total-cont-left {
@@ -144,7 +146,7 @@ body, h1, h2, h3, h4, h5, h6, .doughbutton {
 .total-day-cont {
     margin-top: 10px;
     font-weight: bold;
-    height: 900px;
+    /* height: 900px; */
     justify-content: center;
 }
 
